--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.4",
     "core-js": "^3.1.2",
+    "firebase": "^7.2.1",
+    "sweetalert2": "^8.18.4",
     "vue": "^2.6.10",
+    "vue-loading-overlay": "^3.2.0",
     "vue-router": "^3.0.6",
     "vuex": "^3.0.1"
   },
