--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.0.4",
     "core-js": "^3.1.2",
     "firebase": "^7.2.1",
+    "howler": "^2.1.2",
     "sweetalert2": "^8.18.4",
     "vue": "^2.6.10",
     "vue-loading-overlay": "^3.2.0",
